# ztate

./: Cargo.toml  INSTALL.wallet.md  MIGRATION.md  README.md  RELEASE_NOTES.md
.github/workflows/: folding.yml  perf.yml  proof-fixture-ci.yml
docs/: README.md  nova_folding_demo.md  operator-guide.md  reconstruction_requirements.md  test-gaps.md  zk_backends.md  ztate_state_roots_and_folding.md
docs/architecture/: fold_global_integration.md  folding_block_lifecycle.md  global_proof_vk_registry.md  nova_folding_plan.md  ztate_state_folding_interaction.md
docs/interfaces/p2p/: gossip_block.jsonschema
docs/interfaces/rpc/: README.md  validator_telemetry_response.jsonschema
docs/interfaces/rpc/examples/: validator_telemetry_response.json
docs/interfaces/runtime/: light_client_global_proof.md
docs/interfaces/runtime/examples/: light_client_global_proof.json
docs/interfaces/snapshots/: node_openapi.json
docs/monitoring/: folding_alerting.md
docs/observability/: pruning.md
docs/runbooks/: observability.md
docs/storage/: firewood.md  pruning.md
docs/testing/: folding_ci_gates.md
ops/alerts/storage/: firewood.yaml
prover/prover_stwo_backend/src/official/verifier/: mod.rs
rpp/chain/: Cargo.toml
rpp/chain-cli/: Cargo.toml  SDK.md
rpp/chain-cli/src/: lib.rs
rpp/consensus/src/: state.rs
rpp/node/src/telemetry/: pruning.rs
rpp/proofs/: rpp.rs
rpp/proofs/plonky3/prover/: mod.rs
rpp/proofs/proof_system/: mod.rs
rpp/proofs/stwo/prover/: mod.rs
rpp/proofs/stwo/tests/: mock_fold_pipeline.rs  mock_state_view.rs  mod.rs
rpp/runtime/: node.rs
rpp/runtime/telemetry/: metrics.rs
rpp/runtime/types/: block.rs  mod.rs
rpp/storage/: ledger.rs  mod.rs
rpp/zk/backend-interface/: Cargo.toml
rpp/zk/backend-interface/examples/: nova_folding_demo.rs
rpp/zk/backend-interface/src/: folding.rs  lib.rs  proof_version.rs
scripts/: demo_nova_folding.sh
scripts/ci/: api_contract_guard.py  check_fixture_thresholds.py  migration_compatibility_check.py  run_roundtrip_matrix.sh
storage-firewood/: Cargo.toml
storage-firewood/src/: lifecycle.rs  pruning.rs  state.rs
tests/: pruning_io_alerts.rs  rpc_sdk_reconnect.rs  runtime_smoke.rs
tests/fixtures/: README.md
tests/fixtures/v1/: metadata.json  proof.json  vk.json
tests/fixtures/v2/: metadata.json  proof.json  vk.json
