[workspace]
members = [
  "benchmark",
  "ffi",
  "firewood-macros",
  "firewood",
  "fwdctl",
  "storage", 
  "storage-firewood", 
  "triehash", 
  "prover/plonky3_backend",
  "rpp/crypto-vrf", 
  "rpp/identity-tree",
  "rpp/p2p",
  "rpp/chain",
  "rpp/chain-cli",
  "rpp/pruning",
  "rpp/node-runtime-api",
  "rpp/node",
  "rpp/wallet-runner",
  "rpp/wallet-interface",
  "rpp/wallet-integration-tests",
  "xtask",
  "tools/simnet", "tools/snapshot-verify", "tools/worm-export-stub", "tools/zsi-fixtures",
]
exclude = ["scripts/vendor_plonky3"]
default-members = [
  "benchmark",
  "ffi",
  "firewood-macros",
  "firewood",
  "fwdctl",
  "storage",
  "storage-firewood",
  "triehash",
  "rpp/crypto-vrf",
  "rpp/identity-tree",
  "rpp/p2p",
  "rpp/chain",
  "rpp/chain-cli",
  "rpp/pruning",
  "rpp/node-runtime-api",
  "rpp/node",
  "rpp/wallet-runner",
  "rpp/wallet-interface",
]
resolver = "2"

[workspace.features]
vendor_electrs = ["rpp-chain/vendor_electrs"]
integration = []
prod = [
    "rpp-chain/prod",
    "rpp-node/prod",
]
nightly-prover = [
    "rpp-chain/nightly-prover",
    "rpp-consensus/nightly-prover",
    "rpp-wallet-lib/nightly-prover",
    "rpp-crypto-vrf/nightly-prover",
    "rpp-node/nightly-prover",
]
prover-stwo = [
    "nightly-prover",
    "rpp-chain/prover-stwo",
    "rpp-consensus/prover-stwo",
    "rpp-wallet-lib/prover-stwo",
    "rpp-node/prover-stwo",
    "prover_stwo_backend/prover-stwo",
    "rpp-wallet-interface/prover-stwo",
]
prover-stwo-simd = [
    "nightly-prover",
    "prover-stwo",
    "rpp-chain/prover-stwo-simd",
    "rpp-consensus/prover-stwo-simd",
    "rpp-wallet-lib/prover-stwo-simd",
    "rpp-node/prover-stwo-simd",
    "prover_stwo_backend/prover-stwo-simd",
    "rpp-wallet-interface/prover-stwo",
]
wallet_gui = ["rpp-wallet-lib/wallet_gui"]
backend-plonky3 = [
    "rpp-chain/backend-plonky3",
    "rpp-node/backend-plonky3",
    "simnet/backend-plonky3",
]
backend-plonky3-gpu = [
    "backend-plonky3",
    "rpp-chain/backend-plonky3-gpu",
    "rpp-node/backend-plonky3-gpu",
    "simnet/backend-plonky3-gpu",
    "plonky3-backend/plonky3-gpu",
]

[workspace.package]
version = "0.0.13"
edition = "2021"
license-file = "LICENSE.md"
homepage = "https://avalabs.org"
repository = "https://github.com/ava-labs/chain"
readme = "README.md"
rust-version = "1.79"

[profile.release]
debug = true

[profile.maxperf]
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
inherits = "release"

[profile.repro]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = false

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
arithmetic_side_effects = "warn"
undocumented_unsafe_blocks = "deny"
# lower the priority of pedantic to allow overriding the lints it includes
pedantic = { level = "warn", priority = -1 }
# These lints are from pedantic but allowed. They are a bit too pedantic and
# encourage making backwards incompatible changes.
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
# Ignore interger casts. This is to avoid unnecessary `try_into` calls for usize
# to u64 and vice versa and should be re-enabled if/when clippy has a separate
# lint for usize vs non-usize truncation.
cast_possible_truncation = "allow"

[workspace.dependencies]
# workspace local packages
firewood = { path = "firewood", version = "0.0.13" }
firewood-macros = { path = "firewood-macros", version = "0.0.13" }
firewood-storage = { path = "storage", version = "0.0.13" }
firewood-ffi = { path = "ffi", version = "0.0.13" }
firewood-triehash = { path = "triehash", version = "0.0.13" }
rpp-chain-cli = { path = "rpp/chain-cli", version = "0.0.13" }
rpp-node-runtime-api = { path = "rpp/node-runtime-api", version = "0.0.13" }
prover_stwo_backend = { path = "prover/prover_stwo_backend", version = "1.0.0", default-features = false }

# common dependencies
aquamarine = "=0.6.0"
bytemuck = "=1.23.2"
bytemuck_derive = "=1.10.2"
clap = { version = "=4.5.50", default-features = false, features = ["derive", "std"] }
coarsetime = "=0.1.36"
fastrace = "=0.7.14"
hex = "=0.4.3"
integer-encoding = "=4.0.2"
log = "=0.4.28"
metrics = "=0.24.2"
metrics-util = "=0.20.0"
nonzero_ext = "=0.3.0"
opentelemetry = "=0.30.0"
rand_distr = "=0.5.1"
sha2 = "=0.10.9"
smallvec = "=1.15.1"
test-case = "=3.3.1"
thiserror = "=2.0.12"
serde_json = { version = "=1.0.145", default-features = false, features = ["std"] }

# common dev dependencies
criterion = "=0.7.0"
ethereum-types = "=0.15.1"
hex-literal = "=1.0.0"
pprof = "=0.15.0"
rand = "=0.9.2"
tempfile = "=3.23.0"

# vendored libp2p dependencies
asynchronous-codec = "=0.7.0"
env_logger = "=0.11.8"
futures = "=0.3.31"
futures-bounded = "=0.2.4"
futures-rustls = { version = "=0.26.0", default-features = false }
getrandom = "=0.2.16"
hashlink = "=0.10.0"
hickory-proto = { version = "=0.25.2", default-features = false }
hickory-resolver = { version = "=0.25.2", default-features = false }
if-watch = "=3.2.1"
libp2p = { version = "0.56.0", path = "vendor/libp2p/libp2p" }
libp2p-allow-block-list = { version = "0.6.0", path = "vendor/libp2p/misc/allow-block-list" }
libp2p-connection-limits = { version = "0.6.0", path = "vendor/libp2p/misc/connection-limits" }
libp2p-core = { version = "0.43.1", path = "vendor/libp2p/core" }
libp2p-gossipsub = { version = "0.50.0", path = "vendor/libp2p/protocols/gossipsub" }
libp2p-identify = { version = "0.47.0", path = "vendor/libp2p/protocols/identify" }
libp2p-identity = { version = "0.2.12", path = "vendor/libp2p/identity" }
libp2p-memory-connection-limits = { version = "0.5.0", path = "vendor/libp2p/misc/memory-connection-limits" }
libp2p-noise = { version = "0.46.1", path = "vendor/libp2p/transports/noise" }
libp2p-plaintext = { version = "0.43.0", path = "vendor/libp2p/transports/plaintext" }
libp2p-quic = { version = "0.13.0", path = "vendor/libp2p/transports/quic" }
libp2p-peer-store = { version = "0.1.0", path = "vendor/libp2p/misc/peer-store" }
libp2p-ping = { version = "0.47.0", path = "vendor/libp2p/protocols/ping" }
libp2p-request-response = { version = "0.29.0", path = "vendor/libp2p/protocols/request-response" }
libc = "=0.2.177"
libp2p-swarm = { version = "0.47.0", path = "vendor/libp2p/swarm" }
libp2p-swarm-derive = { version = "=0.35.1", path = "vendor/libp2p/swarm-derive" }
libp2p-tcp = { version = "=0.44.0", path = "vendor/libp2p/transports/tcp" }
libp2p-tls = { version = "=0.6.2", path = "vendor/libp2p/transports/tls" }
libp2p-mplex = { version = "=0.43.1", path = "vendor/libp2p/muxers/mplex" }
libp2p-muxer-test-harness = { version = "=0.1.0", path = "vendor/libp2p/muxers/test-harness" }
libp2p-webrtc-utils = { version = "=0.4.0", path = "vendor/libp2p/misc/webrtc-utils" }
libp2p-yamux = { version = "=0.47.0", path = "vendor/libp2p/muxers/yamux" }
multiaddr = "=0.18.2"
multihash = "=0.19.3"
multistream-select = { version = "=0.13.0", path = "vendor/libp2p/misc/multistream-select" }
prometheus-client = "=0.23.1"
quick-protobuf-codec = { version = "=0.3.1", path = "vendor/libp2p/misc/quick-protobuf-codec" }
quickcheck = { package = "quickcheck-ext", path = "vendor/libp2p/misc/quickcheck-ext" }
rcgen = "=0.13.2"
ring = "=0.17.14"
rw-stream-sink = { version = "=0.4.0", path = "vendor/libp2p/misc/rw-stream-sink" }
tokio = { version = "=1.48.0", default-features = false, features = ["macros"] }
tracing = { version = "=0.1.41", default-features = false, features = ["attributes", "log", "std"] }
tracing-subscriber = { version = "=0.3.20", default-features = false, features = ["fmt", "std"] }
unsigned-varint = "=0.8.0"
web-time = "=1.1.0"

# plonky3 proof system dependencies
p3-air = { version = "=0.3.0" }
p3-baby-bear = { version = "=0.3.0" }
p3-challenger = { version = "=0.3.0" }
p3-commit = { version = "=0.3.0" }
p3-field = { version = "=0.3.0" }
p3-mersenne-31 = { version = "=0.3.0" }
p3-matrix = { version = "=0.3.0" }
p3-mds = { version = "=0.3.0" }
p3-poseidon = { version = "=0.3.0" }
p3-util = { version = "=0.3.0" }


[patch.crates-io]
libp2p-core = { path = "vendor/libp2p/core" }
libp2p-swarm = { path = "vendor/libp2p/swarm" }
libp2p-identity = { path = "vendor/libp2p/identity" }
yamux = { path = "rpp/p2p/vendor/yamux/0.13.7" }
yamux-old = { package = "yamux", path = "rpp/p2p/vendor/yamux/0.12.1" }
base64ct = { version = "1.6.0", path = "vendor/base64ct/1.6.0" }
hex-literal = { version = "1.0.0", path = "vendor/hex-literal/1.0.0" }
fastrace = { version = "0.7.14", path = "vendor/fastrace/0.7.14" }
fastrace-macro = { version = "0.7.14", path = "vendor/fastrace-macro/0.7.14" }
home = { version = "0.5.5", path = "vendor/home/0.5.5" }

