[package]
name = "storage-firewood"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
bincode = { version = "=1.3.3", default-features = false }
blake3 = "=1.8.2"
parking_lot = "=0.12.5"
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = { version = "=1.0.145", default-features = false, features = ["std"] }
tempfile = "=3.23.0"
thiserror = "=2.0.12"
rpp-pruning = { path = "../rpp/pruning" }
metrics = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "=1.8.0"
