[package]
name = "rpp-chain"
version.workspace = true
edition.workspace = true
rust-version = "1.79"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
build = "build.rs"

[features]
default = ["runtime-cli", "prover-mock", "wallet-ui"]
runtime-cli = ["dep:clap"]
integration = ["wallet-ui"]
prod = []
it_state_sync = []
unstable-all-provers = ["rpp-consensus/unstable-all-provers"]
wallet-ui = ["wallet-integration"]
wallet-integration = [
    "dep:rpp-wallet",
    "rpp-wallet/prover-mock",
    "rpp-wallet-interface/wallet_hw",
    "rpp-wallet-interface/wallet_multisig_hooks",
    "rpp-wallet-interface/wallet_zsi",
]
wallet_rpc_mtls = [
    "wallet-integration",
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:rustls-pemfile",
    "axum-server/tls-rustls",
    "rpp-wallet/wallet_rpc_mtls",
    "rpp-wallet-interface/wallet_rpc_mtls",
]
nightly-prover = [
    "dep:prover_stwo_backend",
    "prover_stwo_backend/prover-stwo",
    "dep:stwo",
    "rpp-crypto-vrf/nightly-prover",
]
prover-stwo = [
    "nightly-prover",
    "prover-backend-interface/prover-stwo",
    "rpp-consensus/prover-stwo",
    "rpp-wallet-interface/prover-stwo",
]
prover-stwo-simd = [
    "prover-stwo",
    "nightly-prover",
    "prover-backend-interface/prover-stwo-simd",
    "prover_stwo_backend/simd",
    "rpp-consensus/prover-stwo-simd",
]
prover-mock = [
    "wallet-integration",
    "prover-backend-interface/prover-mock",
    "rpp-consensus/prover-mock",
    "rpp-wallet-interface/prover-mock",
]
backend-plonky3 = [
    "dep:p3-air",
    "dep:p3-baby-bear",
    "dep:p3-challenger",
    "dep:p3-commit",
    "dep:p3-field",
    "dep:p3-matrix",
    "dep:p3-mersenne-31",
    "dep:p3-poseidon",
    "dep:p3-util",
    "dep:plonky3-backend",
    "dep:flate2",
    "prover-backend-interface/backend-plonky3",
    # Vendored via cargo/config.toml to keep the workspace buildable offline.
]
backend-plonky3-gpu = [
    "backend-plonky3",
    "plonky3-backend/plonky3-gpu",
    "prover-backend-interface/backend-plonky3-gpu",
]
backend-rpp-stark = ["wallet-integration", "dep:rpp-stark", "rpp-wallet/backend-rpp-stark"]
vendor_electrs = [
    "wallet-integration",
    "rpp-wallet/vendor_electrs",
    "rpp-wallet-interface/vendor_electrs",
]

[dependencies]
anyhow = "=1.0.100"
argon2 = "=0.5.3"
axum = { version = "=0.7.9", features = ["json"] }
axum-server = { version = "=0.7.3" }
base64 = "=0.22.1"
bincode = "=1.3.3"
blake2 = "=0.10.6"
blake3 = "=1.8.2"
chacha20poly1305 = "=0.10.1"
async-trait = "=0.1.89"
clap = { workspace = true, features = ["derive"], optional = true }
ed25519-dalek = "=2.1.1"
rand = { version = "=0.8.5", features = ["std", "std_rng"] }
flate2 = { version = "=1.0.34", default-features = false, features = ["rust_backend"], optional = true }
hex.workspace = true
libp2p = { path = "../../vendor/libp2p/libp2p", default-features = false }
log.workspace = true
malachite = { version = "=0.4.18", features = ["naturals_and_integers"] }
metrics.workspace = true
opentelemetry = "=0.30.0"
opentelemetry_sdk = "=0.30.0"
opentelemetry-otlp = { version = "=0.30.0" }
opentelemetry-http = "=0.30.0"
num-traits = "=0.2.19"
once_cell = "=1.21.3"
parking_lot = "=0.12.5"
prover-backend-interface = { path = "../zk/backend-interface" }
rayon = "=1.11.0"
prover_stwo_backend = { workspace = true, optional = true }
reqwest = { version = "=0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpp-consensus = { path = "../consensus", default-features = false }
rpp-crypto-vrf = { path = "../crypto-vrf" }
rpp-p2p = { path = "../p2p" }
rpp-identity-tree = { path = "../identity-tree" }
rpp-stark = { path = "../../vendor/rpp-stark", optional = true }
rpp-wallet = { package = "rpp-wallet-lib", path = "../wallet", default-features = false, optional = true }
rpp-wallet-interface = { path = "../wallet-interface", default-features = false }
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = { version = "=1.0.145", default-features = false, features = ["std"] }
serde_ignored = "=0.1.10"
semver = "=1.0.27"
sha2 = "=0.10.9"
storage-firewood = { path = "../../storage-firewood" }
stwo = { package = "stwo-official", path = "../../prover/prover_stwo_backend/vendor/stwo-dev/0.1.1/crates/stwo", default-features = false, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "net"] }
tokio-stream = { version = "=0.1.17", features = ["sync"] }
toml = "=0.9.6"
tower = { version = "=0.5.2", features = ["limit", "util"] }
tower-http = { version = "=0.6.6", features = ["cors", "limit", "timeout"] }
tracing.workspace = true
uuid = { version = "=1.18.1", features = ["v4"] }
tokio-rustls = { version = "=0.26.4", optional = true }
rustls = { version = "=0.23.34", default-features = false, features = ["aws_lc_rs", "logging"], optional = true }
rustls-pemfile = { version = "=1.0.4", optional = true }
zeroize = "=1.8.1"

# Plonky3 backend dependencies
p3-air = { workspace = true, optional = true }
p3-baby-bear = { workspace = true, optional = true }
p3-challenger = { workspace = true, optional = true }
p3-commit = { workspace = true, optional = true }
p3-field = { workspace = true, optional = true }
p3-matrix = { workspace = true, optional = true }
p3-mersenne-31 = { workspace = true, optional = true }
p3-poseidon = { workspace = true, optional = true }
p3-util = { workspace = true, optional = true }
plonky3-backend = { path = "../../prover/plonky3_backend", optional = true }

[dev-dependencies]
chrono = "=0.4.42"
dhat = "=0.3.2"
libc = "=0.2.177"
tempfile.workspace = true
tracing-test = "=0.2.5"
jsonschema = "=0.17.1"
proptest = "=1.8.0"
rcgen = "=0.12.1"
serde = { version = "=1.0.225", features = ["derive"] }
toml = "=0.9.6"
serde_yaml = "=0.9.34"
metrics-exporter-prometheus = "=0.17.2"

[build-dependencies]
rustc_version = "=0.4.1"

[[bin]]
name = "chain-cli"
path = "src/bin/chain_cli.rs"
required-features = ["runtime-cli"]

[[test]]
name = "server_limits"
path = "../rpc/tests/server_limits.rs"

[[test]]
name = "rate_limit_metrics"
path = "../rpc/tests/rate_limit_metrics.rs"

[[test]]
name = "state_sync"
path = "../rpc/tests/state_sync.rs"

[[test]]
name = "pruning"
path = "../rpc/tests/pruning.rs"

[[test]]
name = "pruning_validation"
path = "../../tests/state_sync/pruning_validation.rs"

[[test]]
name = "proof_error_io"
path = "../../tests/state_sync/proof_error_io.rs"

[[test]]
name = "root_corruption"
path = "../../tests/state_sync/root_corruption.rs"

[[test]]
name = "storage"
path = "../../tests/storage/mod.rs"

[[test]]
name = "p2p"
path = "../rpc/tests/p2p.rs"

[[test]]
name = "consensus"
path = "../../tests/consensus.rs"

[[test]]
name = "plonky3_consensus"
path = "../../tests/consensus/plonky3_consensus.rs"

[[test]]
name = "finality_alert_probe"
path = "../../tests/consensus/finality_alert_probe.rs"

[[test]]
name = "zk_alert_probe"
path = "../../tests/zk_alert_probe.rs"

[[test]]
name = "zk_load"
path = "../../tests/zk_load.rs"
required-features = ["prover-stwo", "backend-rpp-stark"]

[[test]]
name = "zk_load_memory"
path = "../../tests/zk_load_memory.rs"
required-features = ["prover-stwo", "backend-rpp-stark"]

[[test]]
name = "feature_guard"
path = "../../tests/feature_guard.rs"

[[test]]
name = "rpp_fail_matrix"
path = "../../tests/rpp_fail_matrix.rs"

[[test]]
name = "runtime_wallet_cfg"
path = "../../tests/runtime_wallet_cfg.rs"
required-features = ["wallet-integration"]

[[test]]
name = "wallet_e2e"
path = "../../tests/wallet_e2e/main.rs"
required-features = ["wallet-integration"]

[[test]]
name = "wallet_policies_fee_e2e"
path = "../../tests/wallet_policies_fee_e2e.rs"
required-features = ["wallet-integration"]

[[test]]
name = "wallet_rpc_limits"
path = "../../tests/wallet_rpc_limits.rs"
required-features = ["wallet-integration"]

[[test]]
name = "upgrade_compat"
path = "../../tests/upgrade_compat.rs"
required-features = ["wallet-integration"]

[[test]]
name = "zsi_renewal"
path = "../../tests/zsi_renewal.rs"

[[test]]
name = "unit"
path = "../../tests/unit/mod.rs"

[[test]]
name = "integration"
path = "../../tests/integration/mod.rs"

[[test]]
name = "proposer_fairness"
path = "../../tests/proposer_fairness.rs"
required-features = ["wallet-ui"]

[[test]]
name = "end_to_end_pipeline"
path = "../../tests/end_to_end_pipeline.rs"
required-features = ["wallet-ui"]

[[test]]
name = "node_lifecycle"
path = "../../tests/node_lifecycle.rs"

[[test]]
name = "observability_metrics"
path = "../../tests/observability_metrics.rs"

[[test]]
name = "observability_otlp_failures"
path = "../../tests/observability_otlp_failures.rs"

[[test]]
name = "vrf_keystore"
path = "../../tests/vrf_keystore.rs"

[[test]]
name = "mempool"
path = "../../tests/mempool/mod.rs"

[[test]]
name = "networking"
path = "../../tests/networking/mod.rs"

[[test]]
name = "runtime_smoke"
path = "../../tests/runtime_smoke.rs"
required-features = ["integration"]

[[test]]
name = "pruning_cross_backend"
path = "../../tests/pruning_cross_backend.rs"

[[test]]
name = "recovery_pruning"
path = "../../tests/recovery_pruning.rs"

[[test]]
name = "deployment_feature_gates"
path = "../../tests/deployment/feature_gates.rs"

[[test]]
name = "wallet_ui_contract"
path = "../rpc/tests/wallet_ui_contract.rs"
required-features = ["wallet-ui"]

[[test]]
name = "sdk_mobile_embedded_smoke"
path = "../../tests/sdk_mobile_embedded_smoke.rs"
required-features = ["wallet-integration"]

[[test]]
name = "rpc_sdk_reconnect"
path = "../../tests/rpc_sdk_reconnect.rs"
required-features = ["integration", "wallet-integration"]

[[test]]
name = "reorg_stark"
path = "../../tests/reorg_stark.rs"
required-features = ["backend-rpp-stark"]

[[test]]
name = "rpp_verifier_smoke"
path = "../../tests/rpp_verifier_smoke.rs"
required-features = ["backend-rpp-stark"]

[[test]]
name = "rpp_circuit_rollback"
path = "../../tests/rpp_circuit_rollback.rs"
required-features = ["backend-rpp-stark"]

[[test]]
name = "uptime_clock_skew"
path = "../../tests/uptime_clock_skew.rs"
required-features = ["prover-stwo"]

[[test]]
name = "admission"
path = "../rpc/tests/admission.rs"

[[test]]
name = "rpc_snapshots"
path = "../../tests/rpc_snapshots/mod.rs"

[[test]]
name = "config_templates"
path = "../../tests/config_templates.rs"

[lints]
workspace = true
