[package]
name = "prover-backend-interface"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
description = "Common prover backend interface shared across RPP components"
license = "MIT"

[features]
default = []
backend-plonky3 = []
backend-plonky3-gpu = ["backend-plonky3"]
prover-stwo = []
prover-stwo-simd = ["prover-stwo"]
prover-mock = []
folding-verify = []

[dependencies]
bincode = "=1.3.3"
blake2 = "=0.10.6"
blake3 = "=1.8.2"
hex = "=0.4.3"
once_cell = "=1.19.0"
opentelemetry = { workspace = true }
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = { workspace = true }
thiserror = "=2.0.12"
tracing = { workspace = true }

[dev-dependencies]
serde = { version = "=1.0.225", features = ["derive"] }
tempfile = { workspace = true }
